[package]
name = "interledger-store"
version = "0.4.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Data stores for Interledger.rs"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[features]
default = []
redis = ["redis_crate"]

[lib]
name = "interledger_store"
path = "src/lib.rs"

[[test]]
name = "redis_tests"
path = "tests/redis/redis_tests.rs"
required-features = ["redis"]

[dependencies]
bytes = { version = "0.4.12", default-features = false }
futures = { version = "0.1.29", default-features = false }
interledger-api = { path = "../interledger-api", version = "^0.3.0", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "^0.4.0", default-features = false }
interledger-btp = { path = "../interledger-btp", version = "^0.4.0", default-features = false }
interledger-ccp = { path = "../interledger-ccp", version = "^0.3.0", default-features = false }
interledger-http = { path = "../interledger-http", version = "^0.4.0", default-features = false }
interledger-router = { path = "../interledger-router", version = "^0.4.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.4.0", default-features = false }
interledger-service-util = { path = "../interledger-service-util", version = "^0.4.0", default-features = false }
interledger-settlement = { path = "../interledger-settlement", version = "^0.3.0", default-features = false }
interledger-stream = { path = "../interledger-stream", version = "^0.4.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.8", default-features = false }
parking_lot = { version = "0.9.0", default-features = false }
ring = { version = "0.16.9", default-features = false }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.41", default-features = false }
tokio-executor = { version = "0.1.8", default-features = false }
tokio-timer = { version = "0.2.11", default-features = false }
url = { version = "2.1.0", default-features = false, features = ["serde"] }
http = { version = "0.1.18", default-features = false }
secrecy = { version = "0.5.1", default-features = false, features = ["serde", "bytes"] }
zeroize = { version = "1.0.0", default-features = false, features = ["bytes"] }
num-bigint = { version = "0.2.3", default-features = false, features = ["std"]}
uuid = { version = "0.8.1", default-features = false, features = ["serde"] }

# redis feature
redis_crate = { package = "redis", version = "0.13.0", default-features = false, features = ["executor"], optional = true }

[dev-dependencies]
env_logger = { version = "0.7.0", default-features = false }
net2 = { version = "0.2.33", default-features = false }
rand = { version = "0.7.2", default-features = false }
tokio = { version = "0.1.22", default-features = false }
os_type = { version = "2.2", default-features = false }
