[package]
name = "interledger-store"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Data stores for Interledger.rs"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[features]
default = []
redis = ["redis_crate"]

[lib]
name = "interledger_store"
path = "src/lib.rs"

[[test]]
name = "redis_tests"
path = "tests/redis/redis_tests.rs"
required-features = ["redis"]

[dependencies]
interledger-api = { path = "../interledger-api", version = "1.0.0", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "1.0.0", default-features = false }
interledger-btp = { path = "../interledger-btp", version = "1.0.0", default-features = false }
interledger-ccp = { path = "../interledger-ccp", version = "1.0.0", default-features = false }
interledger-http = { path = "../interledger-http", version = "1.0.0", default-features = false }
interledger-rates = { path = "../interledger-rates", version = "1.0.0", default-features = false }
interledger-router = { path = "../interledger-router", version = "1.0.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "1.0.0", default-features = false }
interledger-service-util = { path = "../interledger-service-util", version = "1.0.0", default-features = false }
interledger-settlement = { path = "../interledger-settlement", version = "1.0.0", default-features = false }
interledger-stream = { path = "../interledger-stream", version = "1.0.0", default-features = false }
interledger-errors = { path = "../interledger-errors", version = "1.0.0", default-features = false, features = ["redis_errors"] }

bytes = { version = "0.5", default-features = false }
futures = { version = "0.3.7", default-features = false }
once_cell = { version = "1.3.1", default-features = false }
tracing = { version = "0.1.12", default-features = false, features = ["log"] }
parking_lot = { version = "0.10.0", default-features = false }
ring = { version = "0.16.9", default-features = false }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.41", default-features = false }
tokio = { version = "0.2.6", default-features = false, features = ["macros", "rt-core"] }
url = { version = "2.1.1", default-features = false, features = ["serde"] }
http = { version = "0.2", default-features = false }
secrecy = { version = "0.6", default-features = false, features = ["serde", "bytes"] }
zeroize = { version = "1.0.0", default-features = false }
num-bigint = { version = "0.2.3", default-features = false, features = ["std"]}
uuid = { version = "0.8.1", default-features = false, features = ["serde"] }
async-trait = { version = "0.1.22", default-features = false }
thiserror = { version = "1.0.10", default-features = false }

# redis feature
redis_crate = { package = "redis", version = "0.21.0", optional = true, default-features = false, features = ["tokio-comp", "script"] }

[dev-dependencies]
rand = { version = "0.7.2", default-features = false }
socket2 = "0.3.15"
os_type = { version = "2.2", default-features = false }
