[package]
name = "interledger-stream"
version = "0.4.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Client and server implementations of the STREAM transport protocol"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

# Optional feature to log connection statistics using a CSV file
[features]
metrics_csv = ["csv"]

[dependencies]
base64 = { version = "0.10.1", default-features = false }
bytes = { version = "0.4.12", default-features = false }
byteorder = { version = "1.3.2", default-features = false }
chrono = { version = "0.4.9", default-features = false, features = ["clock"] }
csv = { version = "1.1.1", default-features = false, optional = true }
failure = { version = "0.1.5", default-features = false, features = ["derive"] }
futures = { version = "0.1.29", default-features = false }
hex = { version = "0.4.0", default-features = false }
interledger-ildcp = { path = "../interledger-ildcp", version = "^0.4.0", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "^0.4.0", features = ["serde"], default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.4.0", default-features = false }
log = { version = "0.4.8", default-features = false }
parking_lot = { version = "0.9.0", default-features = false }
ring = { version = "0.16.9", default-features = false }
serde = { version = "1.0.101", default-features = false }
tokio = { version = "0.1.22", default-features = false, features = ["rt-full"] }
uuid = { version = "0.8.1", default-features = false, features = ["v4"] }

[dev-dependencies]
interledger-router = { path = "../interledger-router", version = "^0.4.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
