[package]
name = "interledger-stream"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Client and server implementations of the STREAM transport protocol"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

# Optional feature to log connection statistics using a CSV file
[features]
metrics_csv = ["csv"]

[dependencies]
interledger-packet = { path = "../interledger-packet", version = "1.0.0", default-features = false, features = ["serde"] }
interledger-rates = { path = "../interledger-rates", version = "1.0.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "1.0.0", default-features = false }

base64 = { version = "0.11.0", default-features = false }
bytes = { version = "0.4.12", default-features = false }
byteorder = { version = "1.3.2", default-features = false }
chrono = { version = "0.4.9", default-features = false, features = ["clock"] }
futures = { version = "0.3.1", default-features = false, features = ["std"] }
hex = { version = "0.4.0", default-features = false }
log = { version = "0.4.8", default-features = false }
num = { version = "0.2.1" }
parking_lot = { version = "0.10.0", default-features = false }
ring = { version = "0.16.9", default-features = false }
serde = { version = "1.0.101", default-features = false }
tokio = { version = "^0.2.6", default-features = false, features = ["rt-core", "time", "macros"] }
uuid = { version = "0.8.1", default-features = false, features = ["v4"] }
async-trait = { version = "0.1.22", default-features = false }
pin-project = { version = "0.4.7", default-features = false }
thiserror = { version = "1.0.10", default-features = false }

# metrics_csv feature
csv = { version = "1.1.1", default-features = false, optional = true }

[dev-dependencies]
interledger-errors = { path = "../interledger-errors", version = "1.0.0", default-features = false }
interledger-router = { path = "../interledger-router", version = "1.0.0", default-features = false }
interledger-service-util = { path = "../interledger-service-util", version = "1.0.0", default-features = false }

once_cell = { version = "1.3.1", default-features = false }
