[package]
name = "interledger-stream"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Client and server implementations of the STREAM transport protocol"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

# Optional feature to log connection statistics using a CSV file
[features]
strict = ["interledger-packet/strict"]
# Only applicable for roundtripping in fuzzing
# Deliberate error for valid replacement of data, such as `saturating_read_var_uint`.
roundtrip-only = ["strict"]

[dependencies]
interledger-packet = { path = "../interledger-packet", version = "1.0.0", default-features = false, features = ["serde"] }
interledger-rates = { path = "../interledger-rates", version = "1.0.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "1.0.0", default-features = false }

base64 = { version = "0.11.0", default-features = false, features = ["std"] }
bytes = { version = "1.0.1" }
chrono = { version = "0.4.9", default-features = false, features = ["clock"] }
futures = { version = "0.3.7", default-features = false, features = ["std"] }
tracing = { version = "0.1.12", default-features = false, features = ["log"] }
num = { version = "0.2.1" }
ring = { version = "0.16.9", default-features = false }
serde = { version = "1.0.101", default-features = false }
tokio = { version = "1.9.0", default-features = false, features = ["rt", "time", "macros"] }
uuid = { version = "0.8.1", default-features = false, features = ["v4"] }
async-trait = { version = "0.1.22", default-features = false }
pin-project = { version = "0.4.7", default-features = false }
thiserror = { version = "1.0.10", default-features = false }

[dev-dependencies]
interledger-errors = { path = "../interledger-errors", version = "1.0.0", default-features = false }
interledger-router = { path = "../interledger-router", version = "1.0.0", default-features = false }
interledger-service-util = { path = "../interledger-service-util", version = "1.0.0", default-features = false }
hex-literal = "0.3"
parking_lot = { version = "0.10.0", default-features = false }

once_cell = { version = "1.3.1", default-features = false }
