[package]
name = "interledger-test-helpers"
version = "0.1.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Helpers for testing Interledger components"
license = "Apache-2.0"
edition = "2018"

[dependencies]
futures = "0.1.25"
interledger-packet = { path = "../interledger-packet" }
interledger-service = { path = "../interledger-service" }
parking_lot = "0.7.1"


