[package]
name = "interledger-test-helpers"
version = "0.1.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Helpers for testing Interledger components"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bytes = "0.4.12"
futures = "0.1.25"
interledger-packet = { path = "../interledger-packet", version = "0.1.0" }
interledger-service = { path = "../interledger-service", version = "0.1.0" }
interledger-ildcp = { path = "../interledger-ildcp", version = "0.1.0" }
parking_lot = "0.7.1"


