[package]
name = "interledger"
version = "0.5.1"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Interledger client library"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[features]
default = ["node"]
node = [
    "api",
    "btp",
    "ccp",
    "http",
    "ildcp",
    "router",
    "service-util",
    "settlement",
    "spsp",
    "store-redis",
    "stream",
    "trace",
]
api = ["interledger-api"]
btp = ["interledger-btp"]
ccp = ["interledger-ccp"]
http = ["interledger-http"]
ildcp = ["interledger-ildcp"]
router = ["interledger-router"]
service-util = ["interledger-service-util"]
settlement = ["interledger-settlement" ]
spsp = ["interledger-spsp", "stream"]
store-redis = ["interledger-store-redis"]
stream = ["interledger-stream", "ildcp"]
trace = ["interledger-service/trace"]

[dependencies]
interledger-api = { path = "../interledger-api", version = "^0.2.0", optional = true, default-features = false }
interledger-btp = { path = "../interledger-btp", version = "^0.3.0", optional = true, default-features = false }
interledger-ccp = { path = "../interledger-ccp", version = "^0.2.1", optional = true, default-features = false }
interledger-http = { path = "../interledger-http", version = "^0.3.0", optional = true, default-features = false }
interledger-ildcp = { path = "../interledger-ildcp", version = "^0.3.0", optional = true, default-features = false }
interledger-packet = { path = "../interledger-packet", version = "^0.3.0", default-features = false }
interledger-router = { path = "../interledger-router", version = "^0.3.0", optional = true, default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.3.0", default-features = false }
interledger-service-util = { path = "../interledger-service-util", version = "^0.3.0", optional = true, default-features = false }
interledger-settlement = { path = "../interledger-settlement", version = "^0.2.0", optional = true, default-features = false }
interledger-spsp = { path = "../interledger-spsp", version = "^0.3.0", optional = true, default-features = false }
interledger-stream = { path = "../interledger-stream", version = "^0.3.0", optional = true, default-features = false }
interledger-store-redis = { path = "../interledger-store-redis", version = "^0.3.1", optional = true, default-features = false }

[badges]
circle-ci = { repository = "interledger-rs/interledger-rs" }
codecov = { repository = "interledger-rs/interledger-rs" }
