[package]
name = "ilpy"
version = "0.1.0"
authors = ["Eli Krenzke <eli.krenzke@gmail.com>"]
license = "Apache-2.0"

[lib]
name = "ilpy"
crate-type = ["cdylib"]

[dependencies]
futures = "0.1.25"
ilp = { path="../.." }
tokio = "0.1.11"

[dependencies.pyo3]
version = "0.5.2"
features = ["extension-module"]
